# horizon

./: .env.example  .gitignore  Dockerfile  LICENSE  NOTES.md  README.md  pyproject.toml
.github/workflows/: publish-base-image.yml
agents/: README.md  agent_utils.py  claude_code_horizon_prompt.j2  environment_tools.py  horizon_environment.py
agents/hermes/: README.md  __init__.py  agent.py
agents/openclaw_lcm/: README.md  __init__.py  agent.py  convert_trace.mjs
agents/perfect_context/: __init__.py  agent.py
agents/tools_only/: __init__.py  agent.py
agents/trace_graphiti/: README.md  __init__.py  agent.py
agents/trace_keyword/: __init__.py  agent.py
agents/trace_mem0/: __init__.py  agent.py
agents/trace_rag/: README.md  __init__.py  agent.py
agents/trace_rlm/: README.md  __init__.py  agent.py
agents/trace_shell_context/: __init__.py  agent.py
agents/trace_summary/: __init__.py  agent.py
agents/trace_window/: __init__.py  agent.py
evals/: README.md  dataset.toml
evals/01-example-catering-vendor/: task.toml
evals/01-example-catering-vendor/environment/: Dockerfile  trace.jsonl
evals/01-example-catering-vendor/solution/: solve.sh
evals/01-example-catering-vendor/tests/: judge.py  test.sh
evals/02-example-expense-code/: task.toml
evals/02-example-expense-code/environment/: Dockerfile  trace.jsonl
evals/02-example-expense-code/solution/: solve.sh
evals/03-example-reading-preference/: instruction.md  task.toml
scripts/: bench_parallel.sh  fetch_eval_data.py  horizon_download_trace.py  horizon_install_tools.py
(+10 files in other folders)
